[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/NotoSans/NotoSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/mobileControls.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[node name="MarginContainer" type="CanvasLayer"]

[node name="CanvasLayer" type="MarginContainer" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 60
custom_constants/margin_top = 30
custom_constants/margin_left = 60
custom_constants/margin_bottom = 30
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
margin_left = 60.0
margin_top = 30.0
margin_right = 964.0
margin_bottom = 570.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
margin_right = 153.0
margin_bottom = 540.0

[node name="Button" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
margin_right = 153.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 1 )
text = "Pause"

[node name="Button2" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
margin_top = 79.0
margin_right = 153.0
margin_bottom = 154.0
custom_fonts/font = SubResource( 1 )
text = "Sprint"

[node name="Button3" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
margin_top = 158.0
margin_right = 153.0
margin_bottom = 233.0
custom_fonts/font = SubResource( 1 )
text = "Left"

[node name="Button4" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
margin_top = 237.0
margin_right = 153.0
margin_bottom = 312.0
custom_fonts/font = SubResource( 1 )
text = "Right"

[node name="Button5" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
margin_top = 316.0
margin_right = 153.0
margin_bottom = 391.0
custom_fonts/font = SubResource( 1 )
text = "Jump"
[connection signal="pressed" from="CanvasLayer/HBoxContainer/VBoxContainer/Button" to="CanvasLayer" method="_on_paused_pressed"]
[connection signal="button_down" from="CanvasLayer/HBoxContainer/VBoxContainer/Button2" to="CanvasLayer" method="_on_sprint_pressed"]
[connection signal="button_up" from="CanvasLayer/HBoxContainer/VBoxContainer/Button2" to="CanvasLayer" method="on_sprint_released"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/VBoxContainer/Button2" to="CanvasLayer" method="_on_sprint_pressed"]
[connection signal="button_down" from="CanvasLayer/HBoxContainer/VBoxContainer/Button3" to="CanvasLayer" method="_on_left_pressed"]
[connection signal="button_up" from="CanvasLayer/HBoxContainer/VBoxContainer/Button3" to="CanvasLayer" method="_on_left_released"]
[connection signal="button_down" from="CanvasLayer/HBoxContainer/VBoxContainer/Button4" to="CanvasLayer" method="_on_right_button_pressed"]
[connection signal="button_up" from="CanvasLayer/HBoxContainer/VBoxContainer/Button4" to="CanvasLayer" method="_on_right_release"]
[connection signal="button_down" from="CanvasLayer/HBoxContainer/VBoxContainer/Button5" to="CanvasLayer" method="_on_jump_pressed"]
[connection signal="button_up" from="CanvasLayer/HBoxContainer/VBoxContainer/Button5" to="CanvasLayer" method="_on_jump_released"]
